// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cars request - No parameter 1`] = `
Object {
  "count": 20,
  "data": Array [
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 20,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 LM",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 19,
      "manufacturer": "Ferrari",
      "name": "Ferrari 275",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 18,
      "manufacturer": "Ferrari",
      "name": "Ferrari 488",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1969,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 17,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Lusso",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 16,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GTO",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 15,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT 2+2",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1960,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 14,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Berlinetta SWB",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1959,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 13,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Coupé",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1954,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 12,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 MM",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1952,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 11,
      "manufacturer": "Ferrari",
      "name": "Ferrari 212 Inter",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1951,
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;

exports[`Cars request - With refFields params 1`] = `
Object {
  "count": 20,
  "data": Array [
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 20,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 LM",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 19,
      "manufacturer": "Ferrari",
      "name": "Ferrari 275",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 18,
      "manufacturer": "Ferrari",
      "name": "Ferrari 488",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1969,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 17,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Lusso",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 16,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GTO",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 15,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT 2+2",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1960,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 14,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Berlinetta SWB",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1959,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 13,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Coupé",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1954,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 12,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 MM",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1952,
    },
    Object {
      "createdAt": "2021-04-02T00:00:00.000Z",
      "id": 11,
      "manufacturer": "Ferrari",
      "name": "Ferrari 212 Inter",
      "updatedAt": "2021-04-02T00:00:00.000Z",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1951,
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;

exports[`Users request - No parameter 1`] = `
Object {
  "count": 16,
  "data": Array [
    Object {
      "birthdate": "2021-01-01T00:00:00.000Z",
      "createdAt": "2021-01-05T00:00:00.000Z",
      "firstname": "Firstname 16",
      "id": 16,
      "lastname": "Lastname 16",
      "rating": 5,
      "updatedAt": "2021-01-05T00:00:00.000Z",
    },
    Object {
      "birthdate": "2021-01-01T00:00:00.000Z",
      "createdAt": "2021-01-04T00:00:00.000Z",
      "firstname": "Firstname 15",
      "id": 15,
      "lastname": "Lastname 15",
      "rating": 5,
      "updatedAt": "2021-01-04T00:00:00.000Z",
    },
    Object {
      "birthdate": "2021-01-01T00:00:00.000Z",
      "createdAt": "2021-01-03T00:00:00.000Z",
      "firstname": "Firstname 14",
      "id": 14,
      "lastname": "Lastname 14",
      "rating": 5,
      "updatedAt": "2021-01-03T00:00:00.000Z",
    },
    Object {
      "birthdate": "2021-01-01T00:00:00.000Z",
      "createdAt": "2021-01-02T00:00:00.000Z",
      "firstname": "Firstname 13",
      "id": 13,
      "lastname": "Lastname 13",
      "rating": 5,
      "updatedAt": "2021-01-02T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2021-01-01T00:00:00.000Z",
      "firstname": "Firstname 12",
      "id": 12,
      "lastname": "Lastname 12",
      "rating": 5,
      "updatedAt": "2021-01-01T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2020-12-31T00:00:00.000Z",
      "firstname": "Firstname 11",
      "id": 11,
      "lastname": "Lastname 11",
      "rating": 5,
      "updatedAt": "2020-12-31T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2020-12-30T00:00:00.000Z",
      "firstname": "Firstname 10",
      "id": 10,
      "lastname": "Lastname 10",
      "rating": 5,
      "updatedAt": "2020-12-30T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2020-12-29T00:00:00.000Z",
      "firstname": "Firstname 9",
      "id": 9,
      "lastname": "Lastname 9",
      "rating": 5,
      "updatedAt": "2020-12-29T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2020-12-28T00:00:00.000Z",
      "firstname": "Firstname 8",
      "id": 8,
      "lastname": "Lastname 8",
      "rating": 5,
      "updatedAt": "2020-12-28T00:00:00.000Z",
    },
    Object {
      "birthdate": "2020-04-02T00:00:00.000Z",
      "createdAt": "2020-12-27T00:00:00.000Z",
      "firstname": "Firstname 7",
      "id": 7,
      "lastname": "Lastname 7",
      "rating": 5,
      "updatedAt": "2020-12-27T00:00:00.000Z",
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;
